# Tai-I-sales-code-automation

./: .gitignore  README.md  build.bat  pyproject.toml  requirements-runtime.txt
.github/: copilot-instructions.md
.github/workflows/: build-windows.yml  ci.yml
config/: default.json
scripts/: run.bat
src/rebar_converter/: __init__.py
src/rebar_converter/excel/: __init__.py  writer.py
src/rebar_converter/gui/: __init__.py  app.py
src/rebar_converter/models/: __init__.py  rebar.py
src/rebar_converter/ocr/: __init__.py  base.py  paddle.py
src/rebar_converter/parsing/: __init__.py  parser.py
src/rebar_converter/pdf/: __init__.py  image.py  reader.py
src/rebar_converter/rules/: engine.py
src/rebar_converter/services/: __init__.py  batch.py
src/rebar_converter/shapes/: __init__.py  analyzer.py
src/rebar_converter/utils/: logging.py
tai_i_sales/: __init__.py  batch.py  cli.py  desktop.py  excel.py  gui.py  ingest.py  models.py  ocr.py  parsing.py  shape.py
tests/: test_excel.py  test_integration.py  test_mvp.py  test_parsing.py  test_rules.py
